--- a/golang-base/Dockerfile
+++ b/golang-base/Dockerfile
@@ -5,9 +5,10 @@ MAINTAINER Filip Gospodinov "filip@monetas.net"
 LABEL name=golang-base
 LABEL version=13
 
-ADD postgres ./postgres
-ADD install.sh ./
+ADD ["postgres/extra.conf","postgres/pg_hba.conf", "postgres/postgres_superuser.sql", "/postgres/"]
 ADD postgres/supervisord.conf /etc/supervisor/conf.d/postgres.conf
+
+ADD install.sh /
 RUN sh install.sh
 
 ADD run_services.sh /opt/
@@ -17,9 +18,9 @@ ADD run_services.sh /opt/
 ENV GOPATH /opt/go
 ENV GOROOT /opt/go_dist/go
 ENV PATH $GOROOT/bin:$GOPATH/bin:$PATH
-ADD https://storage.googleapis.com/golang/go1.4.2.linux-amd64.tar.gz ./
-ADD dependencies ./
-RUN mkdir /opt/go_dist && tar -x -C /opt/go_dist -f ./go1.4.2.linux-amd64.tar.gz
+ADD https://storage.googleapis.com/golang/go1.4.2.linux-amd64.tar.gz /
+ADD dependencies /
+RUN mkdir /opt/go_dist && tar -x -C /opt/go_dist -f /go1.4.2.linux-amd64.tar.gz
 RUN while read dep sha1; do \
         go get "$dep" && cd "$GOPATH/src/$dep" && git checkout "$sha1"; \
     done < dependencies
